--- a/src/boot/Makefile
+++ b/src/boot/Makefile
@@ -10,7 +10,7 @@ $(BIN)/boot: $(OBJECTS)
 	$(CC) $(CFLAGS) -o $@ $(OBJECTS) $(LIBS)
 
 bootparam_prot.h bootparam_prot_xdr.c: bootparam_prot.x
-	$(RPCGEN) bootparam_prot.x 2>/dev/null
+	$(RPCGEN) bootparam_prot.x
 
 $(OBJECTS): bootparam_prot.h
 
