--- a/src/fping/Makefile
+++ b/src/fping/Makefile
@@ -11,15 +11,21 @@ MANDST= fping.l
 # Interval is the minimum amount of time between sending a ping packet to 
 # any host.
 #
-# Timeout  is the minimum amount of time between sending a ping packet to
-# a particular host.
+# Perhost_interval is the minimum amount of time between sending a ping 
+# packet to a particular responding host (when count is > 1)
 #
-# Retry is the number of ping packets to send to a host before giving up.
+# Timeout  is the initial amount of time between sending a ping packet to
+# a particular non-responding host.
+#
+# Retry is the number of ping packets to send to a non-responding host
+# before giving up (in is-it-alive mode).
 #
 
 DEFAULTS= -DDEFAULT_INTERVAL=25  \
-          -DDEFAULT_TIMEOUT=2500  \
+          -DDEFAULT_PERHOST_INTERVAL=1000  \
+          -DDEFAULT_TIMEOUT=500  \
           -DDEFAULT_RETRY=3
+#         -DDEBUG
 #
 # some systems need the following:
 #
@@ -49,5 +55,7 @@ install:
 clean:
 	rm -f a.out core *~  *.o $(PROG)
 
+
 shar:
 	shar README CHANGES fping.c fping.man Makefile README.VMS > fping.shar
+
